# lvgl-devenv

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  justfile  lv_conf.h  main_sim.c  shell_minimal.html
.devcontainer/: devcontainer.json
.devcontainer/config/: .bashrc
apps/counter/: CMakeLists.txt  main.c
apps/epaper/: CMakeLists.txt  main.c
apps/hello_world/: CMakeLists.txt  main.c
apps/shapes/: CMakeLists.txt  main.c
cmake/: lvgl_app.cmake
shared/: sim_harness.c  sim_harness.h
